chore: inserting meta thumbnail

--- a/template/pages/@/meta.ejs
+++ b/template/pages/@/meta.ejs
@@ -152,6 +152,7 @@ if (pathname) {
   <meta property="og:locale" content="<%= ogLocale %>">
   <% if (ogImage) { %>
     <meta property="og:image" content="<%= ogImage %>">
+    <meta name="thumbnail" content="<%= ogImage %>" />
   <% } %>
   <% if (social.fb_app_id) { %>
     <meta property="fb:app_id" content="<%= social.fb_app_id %>">
